2014-07-17  Oliver Kiddle  <opk@zsh.org>

	* 32849: Completion/Linux/Command/_ss: new completion function

	* 32848: Completion/Unix/Command/_perl,
	Completion/Unix/Command/_python, Completion/Unix/Command/_ruby:
	fix words array before using _normal for script arguments

2014-07-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 32866 (plus extra undo fix in read-from-minibuffer):
	Doc/Zsh/contrib.yo, Functions/Zle/read-from-minibuffer,
	Functions/Zle/replace-argument: new replace-argument function;
	fixes in read-from-minibuffer not to pass through numeric
	argument to recursive edit and to hide minibuffer edit from
	undo history.

2014-07-15  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Koen Wilde: 32863:  Completion/Unix/Command/_mpc: mpc "insert"
	command.

2014-07-08  Peter Stephenson  <p.stephenson@samsung.com>

	* Dominic Hopf: 32837: Config/defs.mk.in: improve handling of
	installation location for help directories.

	* 32832: Doc/Zsh/grammar.yo Doc/Zsh/params.yo: attempt to
	improve documentation for how assignment works.

2014-07-03  Axel Beckert  <abe@deuxchevaux.org>

	* Felipe Sateler: 32819: Completion/Debian/Command/_axi-cache:
	Update for axi-cache completion.

	* Vincent Lefevre: 32818: Completion/Unix/Command/_gzip:
	--rsyncable option is missing

	* Daniel Bolton: 32815: Completion/Debian/Command/_aptitude:
	missing resolver options

	* Sebastian Ramacher: 32814: Completion/Debian/Command/_dpkg:
	Add --add-architecture, --remove-architecture, and
	--print-foreign-architectures options.

2014-07-03  Mikael Magnusson  <mikachu@gmail.com>

	* 32821: Completion/Unix/Command/_gcc: Update _gcc as of GCC
	4.8.3 for generic options and x86.

2014-07-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Jun T: 32833: Completion/Unix/Command/_python,
	Completion/Unix/Command/_ruby: complete file arguments as for
	perl.

2014-06-30  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Jun T: 32823: Completion/Unix/Command/_perl: complete file